# spbd-lab-przetwarzanie-danych-w-chmurze

./: .gitignore  README.md
.github/workflows/: docker-publish.yml
airflow/lab-01/: README.md
airflow/modules/M001/: legacy_dag.py  pre_taskflow_dag.py  taskflow_dag.py
airflow/modules/M003/: operators.py  scheduling.py  sensors.py
airflow/modules/M004/: jinja.py  params.py  task_lifecycle.py  variables.py
dbt/: README.md  dbt.html  dbt_lab01_presentation.html  dbt_lab02_presentation.html  dbt_lab03_presentation.html  dbt_lab04_presentation.html  dbt_lab05_presentation.html  dbt_lab06_presentation.html  duckdb.html  index.html
dbt/lab-dbt01/: GENERATOR_MANUAL.md  ec2.tf  get_books.py  main.tf  output.tf  s3.tf  startup.sh
dbt/lab-dbt02/: generator.py  get_books.py
dbt/lab-dbt03/: ec2.tf  lambda_function.tf  output.tf  s3.tf  variables.tf
dbt/lab-dbt05/: airflow.cfg  init.sh  profiles.yml
docker/vscode-server/: Dockerfile  pyproject.toml  vscode.sh
terraform/lab-01/: README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars  variables.tf
terraform/lab-02/: README.,d  README.md  airflow.tf  data.tf  locals.tf  main.tf  outputs.tf  terraform.tf  variables.tf  vscode.tf
terraform/lab-03/: README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars  variables.tf
terraform/lab-module/: ec2.tf  output.tf  startup.sh  variables.tf  vpc.tf
terraform/lab-tf01/: main.tf
terraform/lab-tf02/: main.tf  providers.tf  variables.tf
terraform/lab-tf03/: ec2.tf  output.tf  providers.tf  startup.sh  vpc.tf
terraform/lab-tf04/: main.tf  variables.tf
(+76 files in other folders)
