[tool.poetry]
name = "vscode-server-dbt"
version = "0.1.1"
description = "Code-server with dbt"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.3"
dbt-duckdb = "^1.9.2"
pandas = "*"
airflow = "*"
jupyter = "*"
faker = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"