[tool.poetry]
name = "vscode-server-dbt"
version = "0.1.3"
description = "Code-server with dbt"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.3"
dbt-duckdb = "^1.9.2"
pandas = "*"
apache-airflow = {version = "2.9.3", python = ">=3.10,<3.13"}
jupyter = "*"
faker = "*"
kagglehub = "*"
argcomplete = "*"
awscli = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"